--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@
 	box-sizing: border-box;
 }
 
+html {
+	margin-left: calc(100vw - 100%); 
+}
+
 body {
 	background-image: url("../concrete-texture/concrete-texture.png");
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -104,15 +108,6 @@ ul.nav-tabs {
 	line-height: 1.5;
 }
 
-.sidebar {
-	float: right;
-	width: 270px;
-	border: 1px solid #ddd;
-	background-color: #fff;
-	padding: 10px;
-	text-align: center;
-}
-
 .about-link a {
 	color: #4aaaa5;
 	text-decoration: underline;
@@ -205,6 +200,15 @@ textarea {
 
 /* SIDEBAR */
 
+.sidebar {
+	float: right;
+	width: 270px;
+	border: 1px solid #ddd;
+	background-color: #fff;
+	padding: 10px;
+	text-align: center;
+}
+
 .sidebar a {
 	text-decoration: none;
 }
@@ -227,3 +231,130 @@ footer {
 	font-size: 0.85em;
 	color: #fff;
 }
+
+
+
+/* --------- MEDIA QUERIES --------- */
+
+@media (max-width: 980px) {
+	
+	.container {
+		width: 77.55%;
+	}
+
+	ul.nav-tabs {
+		display: block;
+		float: right;
+		margin-left: 0;
+		padding-top: 33px;
+	}
+
+	.main-section {
+		width: 59.21%;
+	}
+
+	.project-item {
+		width: 100%;
+	}
+
+	.project-item h5 {
+		position: absolute;
+		bottom: 6px;
+		margin-top: 0;
+	}
+
+	.sidebar {
+		width: 35.53%;
+	}
+
+}
+
+@media (max-width: 768px) {
+
+	.container {
+		width: 93.75%;
+	}
+
+	ul.nav-tabs {
+		margin-left: 0;
+	}
+
+	.main-section {
+		margin-bottom: 20px;
+	}
+
+	.main-section, .sidebar {
+		width: 100%;
+	}
+
+	.project-item {
+		width: 48%;
+	}
+
+	.sidebar {
+		float: left;
+		text-align: left;
+		margin-bottom: 80px;
+		padding: 0 20px 20px 20px;
+	}
+
+	.sidebar a img {
+		width: 55px;
+	}
+
+}
+
+@media (max-width: 640px) {
+
+	nav {
+		position: static;
+		margin-bottom: 20px;
+	}
+
+	.container {
+		width: 100%;
+	}
+	
+	.logo {
+		padding: 20px 0;
+		display: block;
+		text-align: center;
+	}
+
+	ul.nav-tabs {
+		float: none;
+		display: block;
+		height: 36px;
+		margin: 0;
+		padding: 10px 0;
+	}
+
+	.nav-tabs li {
+		width: 32.33%;
+		padding: 0;
+		text-align: center;
+	}
+
+	.content {
+		width: 95.31%;
+		margin: 0 auto;
+	}
+
+	.main-section img {
+		float: none;
+		width: 200px;
+		display: block;
+		margin: 0 auto 10px;
+	}
+
+	.project-item {
+		width: 100%;
+	}
+
+	.project-item img {
+		width: 100%;
+		margin: 0;
+	}
+
+}
+
